# polyfit

./: .gitignore  CMakeLists.txt  README.md
include/: polyfit.h
src/: matrix.c  matrix.h  polyfit.c
test/: CMakeLists.txt  main.c
